2004-01-20	ujwal

    * Added support for "Focus follows mouse".
	* Fixed ctrl-/ key to generate \037 and ctrl-? to generate \177.

2004-01-19	ujwal

    * Made cmd-W behave more consistently when Find and AddressBook windows 
      are key.
    * Added support for cmd-+ and cmd-- for increasing and decreasing font size 
      respectively. Localizations need to be translated.
    * Preferences shortcut is not cmd-, in line with new Apple guidelines.
    * Overrode PTYTextView: -mouseEntered method to avoid activation of 
      I-beam cursor.
    * Added menu item to toggle toolbar visibility with shortcut.

2004-01-01	ujwal

    * Cursor blinks only in active window.

2003-12-18	fabian
    
    * Fixed a bug related to inputting international characters
    * Fixed errors in Korean translation (provided by TaeYoung).
    
2003-11-27	ujwal

    * Added method in PreferencePanel to set tabViewType.

2003-11-15	ujwal

    * ARRAY code is working again, i.e. as well as it was before.

2003-11-13	ujwal

    * Added Xcode project.
    * Update Makefile to work with both Xcode and ProjectBuilder.
    * Fixed ARRAY code build errors. Still does not run correctly.

2003-11-09	ujwal

    * Removed hardcoded references to Osaka-Mono font.

2003-11-06	ujwal

    * Fixed bug causing incorrect number of columns.
    * Updating screen on keydown.

2003-11-05	ujwal

    * Fixed resizing problems when toolbar visibility is toggled by overriding 
      behavior of toolbar button.

2003-11-04	fabian
    
    * Checking in the new icon
    * Checking in German localization
    * Updated webpage and help files for new release
    
2003-10-15	fabian

    * Put in Ujwal's fix of crash when enforce aligment unchecked
    
2003-10-10	fabian

    * Corrected the encoding for the French version of iTerm.strings.
    
2003-10-09	ujwal

    * Reverted to individual timer threads for each session. Other code 
      is not fully tested yet.

2003-10-09	fabian
